--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,7 @@ a {
   right: -30px;
   margin: 0;
   padding: 8px 40px 4px 40px;
+  font-family: "Cuprum", "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
   text-align: center;
@@ -339,7 +340,7 @@ input[type="search"]:focus + * .search-icon {
 .site-title {
   margin: 0;
   margin-top: -3px;
-  margin-right: 95px;
+  margin-right: 93px;
   width: 197px;
   font-style: italic;
   font-size: 16px;
@@ -446,14 +447,14 @@ input[type="search"]:focus + * .search-icon {
 
 .user-name p {
   margin: 0;
-  padding: 12px 57px;
+  padding: 12px 57px 12px 56px;
   text-align: center;
 }
 
 .user-name span:first-child {
   position: absolute;
-  top: 14px;
-  left: 17px;
+  top: 13px;
+  left: 15px;
 }
 
 .user-name span:last-child {
@@ -723,6 +724,7 @@ a.my-room {
 .features-slider-item {
   display: none;
   position: relative;
+  max-height: 266px;
 }
 
 .features-slider-item h3 {
@@ -937,7 +939,7 @@ a.my-room {
 .control-list {
   position: relative;
   margin: 0;
-  margin-top: 3px;
+  /* margin-top: 3px; */
   margin-bottom: 100px;
   padding: 0;
   list-style: none;
@@ -992,6 +994,7 @@ a.control-current {
 
 .services-slide-item h4 {
   margin: 0;
+  margin-top: -3px;
   font-size: 30px;
   line-height: 30px;
   font-weight: normal;
@@ -1080,7 +1083,7 @@ a.control-current {
 
 .railway-carriers {
   margin: 0;
-  margin-top: 4px;
+  /* margin-top: 3px; */
   margin-bottom: 20px;
   padding: 0;
   padding-left: 37px;
@@ -1184,7 +1187,7 @@ a.control-current {
 
 .catalog-title h2 {
   margin: 0;
-  padding: 30px 0 30px 30px;
+  padding: 29px 0 30px 29px;
   font-family: "Cuprum", "Arial", sans-serif;
   font-size: 30px;
   line-height: 30px;
@@ -1340,7 +1343,7 @@ a.control-current {
 
 .filter-price {
   margin: 0;
-  margin-top: 15px;
+  margin-top: 13px;
   padding: 0;
   padding-bottom: 25px;
   width: 100%;
@@ -1395,7 +1398,9 @@ a.control-current {
 
 .price-controls input {
   width: 100%;
-  padding: 10px 13px 10px 28px;
+  padding: 10px 13px 10px 24px;
+  font-size: 17px;
+  line-height: 18px;
   text-align: center;
   background-color: var(--basic-light-grayish);
   border: none;
@@ -1418,7 +1423,7 @@ a.control-current {
   display: flex;
   justify-content: space-between;
   width: auto;
-  margin-left: 20px;
+  margin-left: 21px;
   margin-bottom: 28px;
   font-size: 13px;
   line-height: 18px;
@@ -1428,7 +1433,7 @@ a.control-current {
 
 .catalog-sorting h3 {
   margin: 0;
-  padding: 10px 0 10px 20px;
+  padding: 10px 0 10px 19px;
   font-size: 13px;
   line-height: 17px;
   font-weight: normal;
@@ -1505,7 +1510,8 @@ a.control-current {
 .product-list {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 20px;
+  column-gap: 20px;
+  row-gap: 18px;
   margin: 0;
   width: 700px;
   padding: 0;
@@ -1543,7 +1549,7 @@ a.control-current {
   justify-content: center;
   align-items: center;
   width: auto;
-  min-height: 170px;
+  min-height: 172px;
 }
 
 .product-item h4 {
@@ -1586,7 +1592,7 @@ a.control-current {
 .new-price {
   align-self: start;
   justify-self: flex-end;
-  margin: 0 33px 20px 44px;
+  margin: 5px 33px 20px 44px;
   padding: 10px 44px 10px 32px;
   width: 141px;
   font-size: 17px;
@@ -1594,8 +1600,8 @@ a.control-current {
   font-weight: bold;
   text-align: center;
   color: var(--basic-white);
-  background: linear-gradient(-45deg, transparent 15px, var(--basic-red) 0)bottom right,
-              linear-gradient(225deg, transparent 15px, var(--basic-red) 0)top right;
+  background: linear-gradient(-45deg, transparent 14px, var(--basic-red) 0)bottom right,
+              linear-gradient(225deg, transparent 14px, var(--basic-red) 0)top right;
   background-size: 100% 50%;
   background-repeat: no-repeat;            
   border-radius: 2px;
@@ -1667,14 +1673,14 @@ a.control-current {
 .catalog-navigation {
   display: flex;
   grid-column: 2 / 3;
-  margin: 45px 0px 59px 20px;
+  margin: 48px 0px 59px 20px;
   padding: 0;
   list-style: none;
 }
 
 .button-navigation {
   display: block;
-  padding: 9px 14px;
+  padding: 10px 15px;
   font-size: 13px;
   line-height: 18px;
   color: var(--basic-black);
@@ -1699,7 +1705,7 @@ a.control-current {
 }
 
 .next {
-  padding: 9px 30px;
+  padding: 10px 31px 10px 32px;
 }
 
 .button-current {
@@ -1725,7 +1731,7 @@ a.control-current {
 
 .catalog-text p {
   margin: 0;
-  padding-bottom: 72px;
+  padding-bottom: 67px;
   font-family: "PT Sans","Arial", sans-serif;
   font-size: 13px;
   line-height: 24px;
