--- a/css/style.css
+++ b/css/style.css
@@ -1549,8 +1549,23 @@ a.control-current {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: auto;
+  width: 100%;
+  height: 150px;
+  margin-bottom: 21px;
+  padding: 17px 10px 0 0;
+  text-align: center;
+}
+
+.item-wrapper-catalog {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   min-height: 172px;
+  margin-bottom: 0px;
+  padding: 0;
+  padding-right: 8px;
+  text-align: center;
 }
 
 .product-item h4 {
@@ -2140,7 +2155,7 @@ footer {
   100% {
     transform: translateY(0);
   }
-};
+}
 
 @keyframes shake {
   0%,
@@ -2162,4 +2177,4 @@ footer {
   80% {
     transform: translateX(10px);
   }
-};
+}
